--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,6 +17,8 @@
               <ul class="dropdown-menu">
                 <li><%= link_to 'Mypage', user_path(current_user) %></li>
                 <li role="separator" class="divider"></li>
+                <li><%= link_to 'ユーザー情報変更', edit_user_path(current_user) %></li>
+                <li role="separator" class="divider"></li>
                 <li><%= link_to 'ログアウト', logout_path, method: :delete %></li>
               </ul>
             </li>
