--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -31,9 +31,7 @@
       <%= f.submit 'ユーザー情報の変更', class: 'btn btn-info btn-block'%>
     <% end %>
     
-    <br>
-    
-    <%= link_to '退会・ユーザー情報の削除', @user, method: :delete, data: { confirm: '本当に退会・ユーザー情報を削除してよろしいですか？' }, class: 'btn btn-warning btn-block' %>
+    <!-- <%= link_to '退会・ユーザー情報の削除', @user, method: :delete, data: { confirm: '本当に退会・ユーザー情報を削除してよろしいですか？' }, class: 'btn btn-warning btn-block' %> -->
     
   </div>
 </div>
