--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-default navbar-static-top">
+  <nav class="navbar navbar-inverse navbar-static-top">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -16,6 +16,8 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.name %><span class="caret"></span>
               <ul class="dropdown-menu">
                 <li><%= link_to 'Mypage', user_path(current_user) %></li>
+                <li role="separator" class="divider"></li>
+                <li><%= link_to 'チーム一覧', teams_path %></li>
                 <li role="separator" class="divider"></li>
                 <li><%= link_to 'ユーザー情報変更', edit_user_path(current_user) %></li>
                 <li role="separator" class="divider"></li>
