--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,12 +15,12 @@ footer {
   background-color: #F0FFFF;
 }
 
-/* team, task */
+/* team, theme, task */
 .th_team_normal {
   word-break: normal;
 }
 
-.team_detail {
+.detail {
   background-color: #FFF;
   margin-bottom: 10px;
   border: 1px solid #808080;
@@ -36,6 +36,7 @@ footer {
 /* common */
 .edit_button {
   margin-top: 10px;
+  margin-bottom: 30px;
 }
 
 p.normal {
