--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,6 +19,8 @@
                 <li role="separator" class="divider"></li>
                 <li><%= link_to 'チーム一覧', teams_path %></li>
                 <li role="separator" class="divider"></li>
+                <li><%= link_to 'テーマ一覧', themes_path %></li>
+                <li role="separator" class="divider"></li>
                 <li><%= link_to 'ユーザー情報変更', edit_user_path(current_user) %></li>
                 <li role="separator" class="divider"></li>
                 <li><%= link_to 'ログアウト', logout_path, method: :delete %></li>
