--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -5,7 +5,8 @@
 
 <div class=row"">
   <div class="col-md-6 col-md-offset-3">
-    <div class="team_detail">
+    <h4>チーム概要</h4>
+    <div class="detail">
       <p class="normal"><%= @team.content %></p>
     </div>
     <%= render 'relationships/join_button', team: @team %>
@@ -17,12 +18,27 @@
     <% end %>
     
     <div class="text-center">
-      <h2>参加メンバー</h2>
+      <% if @team.members.any? %>
+        <h2>参加メンバー</h2>
+      <% end %>
       <ul>
         <% @team.members.each do |member| %>
           <li class="members_list"><%=link_to member.name, user_path(member) %></li>
         <% end %>
       </ul>
     </div>
+    <div class="text-center">
+      <% if @team.follow_themes.any? %>
+        <h2>テーマ一覧</h2>
+        <ul>
+          <% @team.follow_themes.each do |theme| %>
+            <li class="members_list"><%=link_to theme.name, theme_path(theme) %></li>
+          <% end %>
+        </ul>
+      <% end %>
+    </div>
+    <% if current_user.join?(@team) %>
+      <%= link_to 'テーマを投稿', new_team_theme_path(@team), class: 'btn btn-info btn-block' %>
+    <% end %>
   </div>
 </div>
