--- a/app/views/team_themes/_team_form.html.erb
+++ b/app/views/team_themes/_team_form.html.erb
@@ -1,6 +1,6 @@
-<%= form_for(theme_path(theme)) do |f| %>
+<%= form_for(theme, :url => {controller: :team_themes, action: :create}) do |f| %>
     <%= hidden_field_tag :theme_id, theme.id %>
-    <%= f.collection_select :team_id, current_user.teams.all, :id, :name, {}, class: 'form-control' %>
+    <%= collection_select :team, :team_id, current_user.teams.all, :id, :name, {}, class: 'form-control' %>
     
     <div class="edit_button">
         <%= f.submit 'このチームを追加', class: 'btn btn-secondary btn-block' %>
