--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -1,20 +1,27 @@
 <div class="text-center">
   <h1><%= @theme.name %></h1>
-  <p>作成ユーザー:<%= @theme.user.name %></p>
-  <p>参加チーム:<% @theme.followed_teams.each do |team| %><%= team.name %><% end %></p>
+  <p>作成ユーザー:<%= link_to @theme.user.name, user_path(@theme.user) %></p>
+  <p>参加チーム:<% @theme.followed_teams.each do |team| %><%= link_to team.name, team_path(team) %><% end %></p>
 </div>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <h4>背景</h4>
     <div class="detail">
-      <p class="normal"><%= @theme.introduction %></p>
+      <p class="normal"><%= simple_format(@theme.introduction) %></p>
     </div>
     
     <h4>目的</h4>
     <div class="detail">
-      <p class="normal"><%= @theme.objective %></p>
+      <p class="normal"><%= simple_format(@theme.objective) %></p>
     </div>
+    
+    <% unless @theme.reference.blank? %>
+      <h4>参考文献</h4>
+      <div class="detail">
+        <p class="normal"><%= simple_format(@theme.reference) %></p>
+      </div>
+    <% end %>
     
     <% if current_user == @theme.user %>
       <div class="edit_button">
@@ -26,20 +33,19 @@
     
     <h4>タスク一覧</h4>
     <div>
-      <ul>
+      <ul class="detail">
         <% @theme.tasks.each do |task| %>
           <li class="members_list"><%= link_to task.title, task_path(task) %></li>
         <% end %>
       </ul>
     </div>
     
-    <% @theme.followed_teams.each do |team| %>
-      <% if current_user.join?(team) %>
-        <div class="edit_button">
-          <%= link_to 'Taskの投稿', new_theme_task_path(@theme), class: 'btn btn-info btn-block' %>
-        </div>
+      <% @theme.followed_teams.any? do |team| %>
+        <% current_user.join?(team) %>
+          <div class="edit_button">
+            <%= link_to '実験・作業の投稿', new_theme_task_path(@theme), class: 'btn btn-info btn-block' %>
+          </div>
       <% end %>
-    <% end %>
       
   </div>
 </div>
