--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,30 @@ footer {
   background-color: #F0FFFF;
 }
 
+/* user-page, mypage */
+#wrapper {
+  width: 984px;
+}
+
+aside.left {
+  float: left;
+  width: 300px;
+  background-color: #EEEEEE;
+  padding :5px 5px;
+}
+
+div.main {
+  padding :5px 20px;
+  float: right;
+  width: 684px;
+}
+
+.clearfix::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
 /* team, theme, task */
 .th_team_normal {
   word-break: normal;
@@ -27,10 +51,15 @@ footer {
 }
 
 .members_list {
-  border: 1px solid #808080;
-  list-style: none;
-  text-align: center;
-  width: 360px;
+  text-align: left;
+}
+
+/* comment */
+
+.comment {
+  background-color: #EEEEEE ;
+  border-radius: 10px;
+  padding: 5px;
 }
 
 /* common */
