--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -31,6 +31,11 @@
         <%= f.text_area :result, class: 'form-control', rows: 100 %>
       </div>
       
+      <div class="form-group">
+        <%= f.label :figure, '図表(画像ファイルで投稿)' %>
+        <%= f.file_field :figure, class: 'form-control' %>
+      </div>
+      
       <%= f.submit '投稿', class: 'btn btn-info btn-block' %>
     <% end %>
   </div>
