--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,13 +1,13 @@
 <div class="text-center">
   <h1><%= @team.name %></h1>
-  <p>作成ユーザー:<%= @team.user.name %></p>
+  <p>作成ユーザー:<%= link_to @team.user.name, user_path(@team.user) %></p>
 </div>
 
 <div class=row"">
   <div class="col-md-6 col-md-offset-3">
     <h4>チーム概要</h4>
     <div class="detail">
-      <p class="normal"><%= @team.content %></p>
+      <p class="normal"><%= simple_format(@team.content) %></p>
     </div>
     <%= render 'relationships/join_button', team: @team %>
     
@@ -17,20 +17,20 @@
       </div>
     <% end %>
     
-    <div class="text-center">
+    <div>
       <% if @team.members.any? %>
-        <h2>参加メンバー</h2>
+        <h4>参加メンバー</h4>
       <% end %>
-      <ul>
+      <ul class="detail">
         <% @team.members.each do |member| %>
           <li class="members_list"><%=link_to member.name, user_path(member) %></li>
         <% end %>
       </ul>
     </div>
-    <div class="text-center">
+    <div>
       <% if @team.follow_themes.any? %>
-        <h2>テーマ一覧</h2>
-        <ul>
+        <h4>テーマ一覧</h4>
+        <ul class="detail">
           <% @team.follow_themes.each do |theme| %>
             <li class="members_list"><%=link_to theme.name, theme_path(theme) %></li>
           <% end %>
