--- a/app/views/team_themes/_team_form.html.erb
+++ b/app/views/team_themes/_team_form.html.erb
@@ -1,8 +1,8 @@
-<%= form_for(theme, :url => {controller: :team_themes, action: :create}) do |f| %>
-    <%= hidden_field_tag :theme_id, theme.id %>
-    <%= collection_select :team, :team_id, current_user.teams.all, :id, :name, {}, class: 'form-control' %>
+<%= form_tag('/team_themes', method: :post, controller: :team_themes, action: :create) do %>
+   <%= hidden_field_tag :theme_id, theme.id %>
+   <%= collection_select :team, :team_id, current_user.teams.all, :id, :name, {}, class: 'form-control' %>
     
     <div class="edit_button">
-        <%= f.submit 'このチームを追加', class: 'btn btn-secondary btn-block' %>
+        <%= submit_tag 'このチームを追加', class: 'btn btn-secondary btn-block' %>
     </div>
 <% end %>
